# Aganitha_Cognitive

./: README.md  pubmed_results.csv  pyproject.toml
aganitha_cognitive/: fetch_pubmed.py
